--- a/VerificationPage.resx
+++ b/VerificationPage.resx
@@ -295,9 +295,6 @@
   <data name="&gt;&gt;header.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <metadata name="sqlCommand1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>197, 27</value>
-  </metadata>
   <data name="nextButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top</value>
   </data>
@@ -370,11 +367,8 @@
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 3, 4, 3</value>
   </data>
-  <data name="&gt;&gt;sqlCommand1.Name" xml:space="preserve">
-    <value>sqlCommand1</value>
-  </data>
-  <data name="&gt;&gt;sqlCommand1.Type" xml:space="preserve">
-    <value>Microsoft.Data.SqlClient.SqlCommand, Microsoft.Data.SqlClient, Culture=neutral, PublicKeyToken=23ec7fc2d6eaa4a5</value>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>Verification</value>
